--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,6 @@
 
 <h1>FIAP Fase 4 - streaming</h1>
 
-<!-- Video Upload Form -->
 <form id="uploadForm" enctype="multipart/form-data">
     <label for="videoFile">Selecione um vídeo para carregar:</label>
     <input type="file" id="videoFile" name="arquivo" accept="video/*" required>
@@ -23,19 +22,29 @@
     <label for="descricao">Descrição:</label>
     <input type="text" id="descricao" name="descricao">
     <br>
-    <!-- Add other fields for dataPublicacao, categoria, favorito -->
+    <label for="dataPublicacao">Data publicação:</label>
+    <input type="date" id="dataPublicacao" name="dataPublicacao">
+    <br>
+    <label for="categoria">Categoria:</label>
+    <input type="text" id="categoria" name="categoria">
+    <br>
+    <label for="favorito">Favorito:</label>
+    <select id="favorito" name="favorito">
+        <option value="true">Sim</option>
+        <option value="false">Não</option>
+    </select>
+    <br>
+
     <button type="button" onclick="uploadVideo()">Upload Video</button>
 </form>
 
 <hr>
 
-<!-- Video Player -->
 <h2>Play Video</h2>
 <video id="videoPlayer" width="640" height="360" controls>
     Your browser does not support the video tag.
 </video>
 
-<!-- List of All Videos -->
 <h2>Todos os videos</h2>
 <ul id="videoList">
     <li th:each="video : ${videos}">
@@ -56,13 +65,17 @@
             nomeArquivo: formData.get('nomeArquivo'),
             titulo: formData.get('titulo'),
             descricao: formData.get('descricao'),
-            // Populate other properties from formData
+            dataPublicacao: formData.get('dataPublicacao'),
+            categoria: formData.get('categoria'),
+            favorito: formData.get('favorito'),
         };
 
         formData.delete('nomeArquivo');
         formData.delete('titulo');
         formData.delete('descricao');
-        // Remove other fields as well
+        formData.delete('dataPublicacao');
+        formData.delete('categoria');
+        formData.delete('favorito');
 
         formData.append('request', new Blob([JSON.stringify(request)], { type: "application/json" }));
 
@@ -81,11 +94,10 @@
     function playVideo(videoUrl) {
         const videoPlayer = document.getElementById('videoPlayer');
         videoPlayer.src = videoUrl;
-        videoPlayer.load(); // Load the new video source
-        videoPlayer.play().catch(e => console.error("Error playing video:", e)); // Log any errors during play
+        videoPlayer.load();
+        videoPlayer.play().catch(e => console.error("Error playing video:", e));
     }
 
-    // Function to fetch and display videos
     function fetchAndDisplayVideos() {
         fetch('/videos')
             .then(response => response.json())
@@ -96,11 +108,11 @@
                 videos.forEach(video => {
                     const videoItem = document.createElement('li');
                     const videoLink = document.createElement('a');
-                    videoLink.href = `#`; // Set href to '#' to make it clickable
+                    videoLink.href = `#`;
                     videoLink.textContent = video.nomeArquivo;
                     videoLink.onclick = function(event) {
-                        event.preventDefault(); // Prevent default link behavior
-                        playVideo(`/videos/play/${video.videoId}`); // Call playVideo with the correct URL
+                        event.preventDefault();
+                        playVideo(`/videos/play/${video.videoId}`);
                     };
                     videoItem.appendChild(videoLink);
                     videoList.appendChild(videoItem);
