--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,6 +74,21 @@
             max-width: 640px;
             margin-bottom: 20px;
         }
+
+        .video-interaction {
+            gap: 10px;  /* Espaço entre o botão e o campo de entrada */
+        }
+
+        .videoPlayer {
+            width: 100%;
+            max-width: 640px;
+            margin-bottom: 10px; /* Menos espaço abaixo do vídeo */
+        }
+
+        #likeButton {
+            white-space: nowrap; /* Evita que o texto do botão quebre em várias linhas */
+        }
+
     </style>
 </head>
 
@@ -90,6 +105,9 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/recommendation">Recomendação</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/favorite">Videos favoritos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/stats">Estatística</a>
@@ -121,12 +139,6 @@
         <label for="categoria" class="form-label">Categoria:</label>
         <input type="text" id="categoria" name="categoria" class="form-control">
         <br>
-        <label for="favorito" class="form-label">Favorito:</label>
-        <select id="favorito" name="favorito" class="form-select">
-            <option value="true">Sim</option>
-            <option value="false">Não</option>
-        </select>
-        <br>
 
         <button type="button" onclick="uploadVideo()" class="btn btn-success">Upload Video</button>
     </form>
@@ -134,9 +146,20 @@
     <hr>
 
     <h2 class="mb-4">Play Video</h2>
+
     <video id="videoPlayer" class="videoPlayer" controls>
         Seu navegador não suporta a tag de vídeo.
     </video>
+
+    <div class="video-interaction d-flex align-items-center mt-2">
+        <button id="likeButton" class="btn btn-primary" onclick="likeVideo()">
+            <i class="fa fa-thumbs-up"></i> Curtir
+        </button>
+        <div class="ms-3">
+            <label for="userId" class="form-label d-block mb-1">ID do Usuário:</label>
+            <input type="text" id="userId" class="form-control" style="width: 200px;" placeholder="Digite seu ID de usuário">
+        </div>
+    </div>
 
     <h2 class="mb-4">Todos os vídeos</h2>
 
@@ -149,16 +172,7 @@
                                 th:value="${categoria}" th:text="${categoria.getNomeCategoria()}"></option>
                     </select>
 
-
-                    <label for="favoritoFilter">Favorito:</label>
-                    <select id="favoritoFilter" onchange="applyFilters()">
-                        <option value="">Todos</option>
-                        <option value="true">Sim</option>
-                        <option value="false">Não</option>
-                    </select>
                 </div>
-
-
 
                 <table class='table table-striped table-hover'>
                 <thead>
@@ -167,7 +181,6 @@
                     <th>Descrição</th>
                     <th>Data de publicação</th>
                     <th>Categoria</th>
-                    <th>Favorito</th>
                     <th>Deletar</th>
                 </tr>
                 </thead>
@@ -177,7 +190,6 @@
                     <td th:text="${video.descricao}"></td>
                     <td th:text="${video.dataPublicacao}"></td>
                     <td th:text="${video.categoria}"></td>
-                    <td th:text="${video.favorito}"></td>
                     <td>
                         <button type="button" onclick="deleteVideo('${video.videoId}')" class="btn btn-danger btn-sm">
                             <i class="fa fa-trash"></i> Deletar
@@ -210,7 +222,6 @@
             descricao: formData.get('descricao'),
             dataPublicacao: formData.get('dataPublicacao'),
             categoria: formData.get('categoria'),
-            favorito: formData.get('favorito'),
         };
 
         formData.delete('nomeArquivo');
@@ -218,7 +229,6 @@
         formData.delete('descricao');
         formData.delete('dataPublicacao');
         formData.delete('categoria');
-        formData.delete('favorito');
 
         formData.append('request', new Blob([JSON.stringify(request)], { type: "application/json" }));
 
@@ -234,7 +244,10 @@
         .catch(error => console.error('Error uploading video:', error));
     }
 
+    let lastPlayedVideoId = null;  // Variável para armazenar o ID do último vídeo reproduzido
+
     function playVideo(videoUrl) {
+        lastPlayedVideoId = videoUrl.split('/').pop();
         const videoPlayer = document.getElementById('videoPlayer');
         videoPlayer.src = videoUrl;
         videoPlayer.load();
@@ -288,10 +301,6 @@
         categoriaCell.textContent = video.categoria;
         videoRow.appendChild(categoriaCell);
 
-        const favoritoCell = document.createElement('td');
-        favoritoCell.textContent = video.favorito;
-        videoRow.appendChild(favoritoCell);
-
         const deleteCell = document.createElement('td');
         const deleteButton = document.createElement('button');
         deleteButton.type = 'button';
@@ -320,7 +329,6 @@
 
     function applyFilters() {
         const categoriaFilter = document.getElementById('categoriaFilter').value;
-        const favoritoFilter = document.getElementById('favoritoFilter').value;
 
         fetch('/videos')
             .then(response => response.json())
@@ -337,6 +345,52 @@
         .catch(error => console.error('Error fetching and applying filters:', error));
     }
 
+    function likeVideo() {
+        const usuarioId = document.getElementById('userId').value;
+        const videoId = lastPlayedVideoId;
+
+        if (!usuarioId || !videoId) {
+            alert('Por favor, insira o ID do usuário e reproduza um vídeo antes de curtir.');
+            return;
+        }
+
+        const today = new Date().toISOString().split('T')[0];  // Formata a data de hoje como yyyy-mm-dd
+
+        const request = {
+            usuarioId: usuarioId,
+            videoId: videoId,
+            dataCriacao: today
+        };
+
+        fetch('/video-favoritos', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(request)
+        })
+        .then(response => {
+            if (!response.ok) {
+                // Se a resposta não for ok, converte a resposta em JSON para poder ler a mensagem de erro
+                return response.json().then(err => { throw new Error(err.message) });
+            }
+            return response.json();
+        })
+        .then(data => {
+            console.log('Vídeo curtido com sucesso:', data);
+            alert('Vídeo curtido com sucesso!');
+        })
+        .catch(error => {
+            console.error('Erro ao curtir vídeo:', error);
+            // Verifica se a mensagem de erro é sobre o vídeo já estar favoritado
+            if (error.message === "O vídeo já está favoritado pelo usuário.") {
+                alert('Você já favoritou este vídeo.');
+            } else {
+                // Para outros erros, mostra uma mensagem genérica
+                alert('Erro ao curtir vídeo. Verifique o console para mais detalhes.');
+            }
+        });
+    }
 
 </script>
 
