--- a/src/main/resources/templates/recommendation.html
+++ b/src/main/resources/templates/recommendation.html
@@ -9,6 +9,29 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">Streaming FIAP</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/favorite">Videos favoritos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/stats">Estatística</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div class="container mt-4">
     <h1>Recomendações de Vídeo</h1>
     <input type="text" id="usuarioId" class="form-control mb-2" placeholder="Digite o ID do usuário para recomendações">
