--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -141,7 +141,7 @@
         <div class="mb-3">
             <label for="categoria">Categoria:</label>
             <select id="categoria" name="categoria" class="form-select">
-                <option th:each="categoria : ${T(com.fase4FIAP.streaming.dominio.enums.Categoria).values()}"
+                <option th:each="categoria : ${T(com.fase4FIAP.streaming.domain.enums.Category).values()}"
                         th:value="${categoria}" th:text="${categoria.getNomeCategoria()}"></option>
             </select>
         </div>
@@ -175,7 +175,7 @@
                     <label for="categoriaFilter">Categoria:</label>
                     <select id="categoriaFilter" onchange="applyFilters()">
                         <option value="">Todas</option>
-                        <option th:each="categoria : ${T(com.fase4FIAP.streaming.dominio.enums.Categoria).values()}"
+                        <option th:each="categoria : ${T(com.fase4FIAP.streaming.domain.enums.Category).values()}"
                                 th:value="${categoria}" th:text="${categoria.getNomeCategoria()}"></option>
                     </select>
 
